--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+@theme {
+  --color-background: #fbf7f1;
+  --color-topbar: #b8b8d8;
+  --color-primary: #000080;
+  --color-secondary: #7b7bbb;
+  --color-textPrimary: #0b011c;
+}
