--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ html {
   overscroll-behavior: none;
   -webkit-overflow-scrolling: touch;
   background-color: black;
+  scrollbar-width: thin;
 }
 
 body {
